--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,12 +1,18 @@
-
-  <html>
-    <head>  
+<html>
+    <head>
+        <link rel="stylesheet" href="/css/styles.css" />
     </head>
-    <body>  
-      <link rel="stylesheet" href="/css/styles.css" />
-      <form action ="/" method="post">
-        <button type="submit"> Postar dados</button>
-       </form>
+    <body>
+        <form action="/" method="post">
+            <h1>{{ name }}, {{ age }} anos</h1>
+            Nome: <input name="name" placeholder="{{ name }}" />
+            <button type="submit">Postar dados</button>
+        </form>
+
+        <ul>
+        {{#each cities}}
+            <li>{{ this.name }}, {{ this.friends }} amigos</li>
+        {{/each}}
+        </ul>
     </body>
-  </html>clear
-    
+</html>
