--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,8 +4,15 @@
     </head>
     <body>
         <form action="/" method="post">
-            Nome: <input name="name" value=""/>
+            <h1>{{ name }}, {{ age }} anos</h1>
+            Nome: <input name="name" placeholder="{{ name }}" />
             <button type="submit">Postar dados</button>
         </form>
+
+        <ul>
+        {{#each cities}}
+            <li>{{ this.name }}, {{ this.friends }} amigos</li>
+        {{/each}}
+        </ul>
     </body>
 </html>
